[package]
name = "tidy"
version = "0.0.1"
authors = ["Sean Rhee <seanrhee2024@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "neat_n_tidy"
path = "src/lib.rs"

[[bin]]
name = "tidy_bin"
path = "src/bin/bin.rs"

[dependencies]
